--- a/src/main/dockerBase/Dockerfile
+++ b/src/main/dockerBase/Dockerfile
@@ -1,7 +1,7 @@
-FROM openjdk:11-jre-slim
-WORKDIR application
+FROM openjdk:17-jdk-slim
+WORKDIR /app
 COPY target/D387_sample_code-0.0.2-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+CMD ["java","-jar","app.jar"]
 
 
