Your commit message

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>edu.wgu</groupId>
-	<artifactId>D387_sample_code</artifactId>
+	<artifactId>Hotel_Application</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>D387 sample code</name>
